[package]
name = "inzip"
version = "0.1.0"
edition = "2024"

[lib]
name="inzip"
path="src/lib.rs"

[[bin]]
name="inzip"
path="src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt"], optional = true }
zip = "7"

[features]
async=["tokio"]
